# aussieshopper

./: .gitignore  CHANGELOG.md  Pipfile  README.md  fabfile.py  manage.py  pyproject.toml  webpack-stats.json
api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/management/commands/: monthlycountstats.py
api/migrations/: 0001_initial.py  0002_auto_20170122_0943.py  0003_auto_20170122_0952.py  0004_logchatmessage_original_msg.py  0005_userprofile.py  0006_auto_20170126_0029.py  0007_auto_20170126_0038.py  0008_userprofile_last_deal_sent_id.py  0009_deal_link.py  0010_auto_20170126_0208.py  0011_userprofile_interest.py  0012_auto_20170126_0228.py  0013_auto_20170204_0025.py  0014_userprofile_last_deal_checked_id.py  0015_deal_raw.py  0016_logchatmessage_kind.py  0017_logchatmessage_fromwhom.py  0018_logchatmessage_direction.py  0019_auto_20170212_0638.py  0020_auto_20170212_0640.py  0021_deal_meta.py  0022_datastore.py  0023_auto_20200216_1156.py
aussieshopper/: celery.py  urls.py  wsgi.py
aussieshopper/settings/: __init__.py  local_settings.py.sample  settings.py
config/: aussieshopper-site.ini  aussieshopper.codedemigod.com  celerybeat.ini  celeryd.ini  requirements.txt
web/: context_processor.py  forms.py  urls.py  views.py
web/frontend/: package.json  webpack.config.js
web/frontend/src/: index.js
web/static/: sitemap.xml
web/templates/emails/: anonymous_contact.html  contact.html  subject_anonymous_contact.txt  subject_contact.txt
web/templates/web/: base.html  index.html  statistics.html
(+2 files in other folders)
